--- a/musicplayer/mainwindow.ui
+++ b/musicplayer/mainwindow.ui
@@ -42,6 +42,9 @@
         <verstretch>0</verstretch>
        </sizepolicy>
       </property>
+      <property name="cursor">
+       <cursorShape>PointingHandCursor</cursorShape>
+      </property>
       <property name="text">
        <string>歌曲列表</string>
       </property>
@@ -49,6 +52,9 @@
     </item>
     <item row="3" column="2">
      <widget class="QPushButton" name="Bpause">
+      <property name="cursor">
+       <cursorShape>PointingHandCursor</cursorShape>
+      </property>
       <property name="text">
        <string/>
       </property>
@@ -66,6 +72,9 @@
         <verstretch>0</verstretch>
        </sizepolicy>
       </property>
+      <property name="cursor">
+       <cursorShape>PointingHandCursor</cursorShape>
+      </property>
       <property name="toolTip">
        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;单击开启静音&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
       </property>
@@ -79,6 +88,9 @@
     </item>
     <item row="3" column="1">
      <widget class="QPushButton" name="Blast">
+      <property name="cursor">
+       <cursorShape>PointingHandCursor</cursorShape>
+      </property>
       <property name="text">
        <string/>
       </property>
@@ -90,6 +102,9 @@
     </item>
     <item row="3" column="3">
      <widget class="QPushButton" name="Bnext">
+      <property name="cursor">
+       <cursorShape>PointingHandCursor</cursorShape>
+      </property>
       <property name="text">
        <string/>
       </property>
@@ -108,6 +123,9 @@
     </item>
     <item row="4" column="1" colspan="4">
      <widget class="QSlider" name="horizontalSlider">
+      <property name="cursor">
+       <cursorShape>OpenHandCursor</cursorShape>
+      </property>
       <property name="mouseTracking">
        <bool>true</bool>
       </property>
@@ -123,6 +141,9 @@
         <horstretch>0</horstretch>
         <verstretch>0</verstretch>
        </sizepolicy>
+      </property>
+      <property name="cursor">
+       <cursorShape>OpenHandCursor</cursorShape>
       </property>
       <property name="mouseTracking">
        <bool>true</bool>
@@ -161,6 +182,9 @@
         <width>50</width>
         <height>50</height>
        </size>
+      </property>
+      <property name="cursor" stdset="0">
+       <cursorShape>PointingHandCursor</cursorShape>
       </property>
       <attribute name="horizontalHeaderStretchLastSection">
        <bool>true</bool>
