1.美化了一些按钮 2.新增鼠标悬浮在按钮上显示相关信息的功能 3.设计了软件图标并应用

--- a/musicplayer/res.qrc
+++ b/musicplayer/res.qrc
@@ -9,5 +9,7 @@
         <file>res/10001.jpg</file>
         <file>res/record.png</file>
         <file>res/stylus.png</file>
+        <file>res/justify.svg</file>
+        <file>res/OurMusic.jpg</file>
     </qresource>
 </RCC>
