--- a/musicplayer/mainwindow.ui
+++ b/musicplayer/mainwindow.ui
@@ -393,6 +393,9 @@ margin-bottom:4px;
     <property name="editTriggers">
      <set>QAbstractItemView::NoEditTriggers</set>
     </property>
+    <property name="selectionMode">
+     <enum>QAbstractItemView::SingleSelection</enum>
+    </property>
     <attribute name="horizontalHeaderStretchLastSection">
      <bool>true</bool>
     </attribute>
